amcvideodec: getOutputBuffers() returns a NULL array when a surface was configured

So don't error out if it does.

https://bugzilla.gnome.org/show_bug.cgi?id=763401